# theshit

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
src/: error.rs  fix.rs  main.rs  misc.rs
src/fix/: output.rs  python.rs  rust.rs  structs.rs
src/fix/rust/: cargo_no_command.rs  mkdir_p.rs
src/shells/: bash.rs  enums.rs  fish.rs  generic.rs  helpers.rs  zsh.rs
